--- a/static/courses.html
+++ b/static/courses.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Learn DevOps from Basics</title>
+        <title>Learn DevOps from Basics by Agash</title>
         <style>
             body {
                 margin: 0;
@@ -86,7 +86,7 @@
         </main>
 
         <footer>
-            <p>&copy; Abhishek.Veeramalla</p>
+            <p>&copy; Agash</p>
         </footer>
     </body>
 </html>
